--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
               <img class="profile-pic" src="images/shrijit.png" alt="shrijit-pic">
               <div class="a-t">
                 <li>
-                  Studies BSc Statistics Honours at Asutosh College.
+                  Studies BSc Statistics Honours at Ramakrishna Mission Residential College, Kolkata (Narendrapur).
                 </li>
                 <li>
                   Proficient orator.
