--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               <img class="profile-pic" src="images/dwaipayan.png" alt="dwaipayan-pic">
               <div class="a-t">
                 <li>
-                  Studies BSc Statistics Honours at St. Xavier's College.
+                  Studies BSc Statistics Honours at St. Xavier's College, Kolkata.
                 </li>
                 <li>
                   Proficient orator.
@@ -260,7 +260,7 @@
               <img class="profile-pic" src="images/saptarshi.png" alt="saptarshi-pic">
               <div class="a-t">
                 <li>
-                  Studies BSc Physics Honours at Serampore College.
+                  Studies BSc Physics Honours at St. Xavier's College, Kolkata.
                 </li>
                 <li>
                   Proficient orator.
