--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               <img class="profile-pic" src="images/dwaipayan.png" alt="dwaipayan-pic">
               <div class="a-t">
                 <li>
-                  Studies BSc Statistics Honours at St. Xavier's College, Kolkata.
+                  Studies BTech in Chemical Engineering at Jadavpur University.
                 </li>
                 <li>
                   Proficient orator.
@@ -248,7 +248,7 @@
                   Cracked JEE Mains (2021).
                 </li>
                 <li>
-                  Cracked Jadavpur University through WBJEE (2021).
+                  Cracked WBJEE (2021).
                 </li>
               </div>
             </div>
@@ -267,6 +267,9 @@
                 </li>
                 <li>
                   Cracked JEE Mains (2021).
+                </li>
+                <li>
+                  Cracked WBJEE (2021).
                 </li>
                 <li>
                   Runs a Physics YouTube channel named <a href="https://www.youtube.com/channel/UCk6E_of7GIRI6nntBsARbFA">Cosmos Unveiled</a>.
