--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               <img class="profile-pic" src="images/dwaipayan.png" alt="dwaipayan-pic">
               <div class="a-t">
                 <li>
-                  Studies BTech in Chemical Engineering at Jadavpur University.
+                  Studies BE in Electrical Engineering at Jadavpur University.
                 </li>
                 <li>
                   Proficient orator.
